# ai-news-aggregator

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx
admin/src/api/: client.ts
admin/src/components/: GraphViewer.tsx  LangSmithRunsList.tsx  Layout.tsx  LoadingSpinner.tsx  RunsTable.tsx  Sidebar.tsx  StatusBadge.tsx  TriggerButton.tsx
admin/src/hooks/: useGraph.ts  useHealth.ts  useLangSmithRuns.ts  usePipelineRuns.ts
admin/src/pages/: Dashboard.tsx  Graph.tsx  Runs.tsx
admin/src/types/: index.ts
docs/: langgraph-data-flow.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ArticleTypeFilter.tsx  Header.tsx  LoadingSpinner.tsx  NewsCard.tsx  NewsList.tsx  TopicFilter.tsx
frontend/src/hooks/: useNewsItems.ts
frontend/src/types/: index.ts
langsmith_traces/: 019b61ec-d709-73a3-ac5d-0e7a62f1a75d.json
src/aggregator/: api.py  config.py  main.py
src/aggregator/db/: __init__.py  connection.py  setup_db.py
src/aggregator/graph/: __init__.py  orchestrator.py  state.py
src/aggregator/graph/nodes/: __init__.py  deduplicate.py  persist.py  publish.py  rss_collector.py  summarize.py
tests/: test_deduplicate.py  test_orchestrator.py  test_persist.py  test_publish.py  test_rss_collector.py  test_summarize.py
